--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -16,3 +16,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+MYAPP_UPLOAD_STORE_FILE=elastos-unity-wallet.keystore
+MYAPP_UPLOAD_KEY_ALIAS=elastos-unity-wallet-key
+MYAPP_UPLOAD_STORE_PASSWORD=Unity2019
+MYAPP_UPLOAD_KEY_PASSWORD=Unity2019
