Add after_failure to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,7 @@ script:
   - react-native run-ios --simulator="iPhone XR"
   - sleep 120
   - npm run test-ios
+after_failure:
+  - react-native run-ios --simulator="iPhone XR"
+  - sleep 120
+  - npm run test-ios
