--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-jest": "23.6.0",
     "chai": "^4.2.0",
     "check-word": "^1.1.0",
+    "detox": "^12.11.0",
     "eslint": "^5.16.0",
     "eslint-plugin-react-native": "^3.7.0",
     "jest": "23.6.0",
