--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-react-native": "^3.7.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.49.0",
+    "mocha": "^6.1.4",
     "react-test-renderer": "16.6.0-alpha.8af6728",
     "wdio-appium-service": "^0.2.3",
     "webdriverio": "^5.7.15"
