--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,44 @@
-language: node_js
-node_js: 10.2.1
+# language: node_js
+# node_js: 10.2.1
+# os: osx
+# osx_image: xcode10.1
+# env: DEVICE=12.1
+# before_script:
+#   - rm -rf package-lock.json
+#   - rm -rf node_modules
+#   - npm i
+#   - npm install -g react-native-cli
+#   - react-native link
+#   - du -sh node_modules/react-native-elastos-wallet-core/lib/ios/libspvsdk.a
+# script:
+#   - react-native start &
+#   - sleep 120
+#   - npm run test-ios
+
+language: objective-c
 os: osx
 osx_image: xcode10.1
 env: DEVICE=12.1
-before_script:
-  - rm -rf package-lock.json
-  - rm -rf node_modules
-  - npm i
+branches:
+  only:
+  - master
+
+env:
+  global:
+  - NODE_VERSION=stable
+
+install:
+  - brew tap wix/brew
+  - brew install applesimutils
+  - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.2/install.sh | bash
+  - export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
+  - nvm install $NODE_VERSION
+  - nvm use $NODE_VERSION
+  - nvm alias default $NODE_VERSION
+
   - npm install -g react-native-cli
-  - react-native link
-  - du -sh node_modules/react-native-elastos-wallet-core/lib/ios/libspvsdk.a
+  - npm install -g detox-cli
+
 script:
-  - react-native start &
-  - sleep 120
-  - npm run test-ios
+  - detox build --configuration ios.sim.release
+  - detox test --configuration ios.sim.release --cleanup
