--- a/.travis.yml
+++ b/.travis.yml
@@ -31,12 +31,12 @@ install:
   - brew tap wix/brew
   - brew install applesimutils
   - brew install git-lfs
+  - git lfs pull
   - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.2/install.sh | bash
   - export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
   - nvm install $NODE_VERSION
   - nvm use $NODE_VERSION
   - nvm alias default $NODE_VERSION
-
   - npm install -g react-native-cli
   - npm install -g detox-cli
   - npm install
