--- a/.travis.yml
+++ b/.travis.yml
@@ -40,8 +40,10 @@ install:
   - npm install -g react-native-cli
   - npm install -g detox-cli
   - npm install
-  - react-native link
+  - cd node_modules/react-native-elastos-wallet-core/lib/ios/
+  - wget https://ademcan.net/libspvsdk.a
   - du -sh node_modules/react-native-elastos-wallet-core/lib/ios/libspvsdk.a
+  - react-native link
 script:
   - detox build --configuration ios.sim.release
   - detox test --configuration ios.sim.release --cleanup
