--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ install:
   - npm install
   - cd node_modules/react-native-elastos-wallet-core/lib/ios/
   - wget https://ademcan.net/libspvsdk.a
+  - ls node_modules/react-native-elastos-wallet-core/lib/ios/
   - du -sh node_modules/react-native-elastos-wallet-core/lib/ios/libspvsdk.a
   - react-native link
 script:
