--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,7 @@ install:
   - npm install
   - cd node_modules/react-native-elastos-wallet-core/lib/ios/
   - wget https://ademcan.net/libspvsdk.a
+  - cd /Users/travis/build/ademcan/elastos-unity-wallet-demof
   - ls node_modules/react-native-elastos-wallet-core/lib/ios/
   - du -sh node_modules/react-native-elastos-wallet-core/lib/ios/libspvsdk.a
   - react-native link
