--- a/.travis.yml
+++ b/.travis.yml
@@ -42,8 +42,9 @@ install:
   - npm install -g detox-cli
   - npm install
   - cd node_modules/react-native-elastos-wallet-core/lib/ios/
+  - rm libspvsdk.a
   - wget https://ademcan.net/libspvsdk.a
-  - cd /Users/travis/build/ademcan/elastos-unity-wallet-demof
+  - cd /Users/travis/build/ademcan/elastos-unity-wallet-demo
   - ls node_modules/react-native-elastos-wallet-core/lib/ios/
   - du -sh node_modules/react-native-elastos-wallet-core/lib/ios/libspvsdk.a
   - react-native link
