--- a/.travis.yml
+++ b/.travis.yml
@@ -37,9 +37,9 @@ matrix:
         - pwd
         - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.2/install.sh | bash
         - export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
-        - nvm install $NODE_VERSION
-        - nvm use $NODE_VERSION
-        - nvm alias default $NODE_VERSION
+        - nvm install 10.2.1
+        - nvm use 10.2.1
+        - nvm alias default 10.2.1
         - npm install -g react-native-cli
         - npm install -g detox-cli
         - npm install
@@ -74,13 +74,11 @@ matrix:
         global:
         - NODE_VERSION=10.2.1
       install:
-        - brew tap wix/brew
-        - brew install applesimutils
         - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.2/install.sh | bash
         - export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
-        - nvm install $NODE_VERSION
-        - nvm use $NODE_VERSION
-        - nvm alias default $NODE_VERSION
+        - nvm install 10.2.1
+        - nvm use 10.2.1
+        - nvm alias default 10.2.1
         - npm install -g react-native-cli
         - npm install -g detox-cli
         - npm install
