--- a/.travis.yml
+++ b/.travis.yml
@@ -61,7 +61,7 @@ matrix:
         - tools
         - platform-tools
         - build-tools-27.0.3
-        - android-26
+        - android-27
         - extra-google-google_play_services
         - extra-google-m2repository
         - extra-android-m2repository
@@ -84,6 +84,7 @@ matrix:
         - npm install
         - react-native link
       script:
+        - yes | sudo sdkmanager --licenses 
         - detox build -c android.emu.release
         - detox test -c android.emu.release --cleanup
         
