--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "binaryPath": "android/app/build/outputs/apk/release/app-release.apk",
         "build":
         "cd android && ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release && cd ..",
-        "type": "android.emulator",
+        "type": "android.attached",
         "name": "Nexus_5X_API_26"
     }
     },
