--- a/.travis.yml
+++ b/.travis.yml
@@ -97,11 +97,17 @@ android:
   - platform-tools
   - build-tools-27.0.3
   - android-27
+  - android-26
+  - add-on
+  - extra
+  - extra-android-support
   - extra-google-google_play_services
   - extra-google-m2repository
   - extra-android-m2repository
   - sys-img-x86-android-26
   - sys-img-x86-android-28
+  - sys-img-armeabi-v7a-google_apis-26
+  - sys-img-armeabi-v7a-google_apis-27
 branches:
   only:
   - master
@@ -119,7 +125,7 @@ install:
   # - npm install
   # - react-native link
 before_script:
-  - echo no | android create avd --force -n test -t android-27 --abi x86 -c 100M
+  - echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a -c 100M
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
