--- a/.travis.yml
+++ b/.travis.yml
@@ -94,10 +94,11 @@ dist: trusty
 android:
   components:
   - tools
+  - tools
   - platform-tools
-  - build-tools-27.0.3
-  - android-27
+  - build-tools-28.0.3
   - android-26
+  # - android-26
   - add-on
   - extra
   - extra-android-support
@@ -115,6 +116,8 @@ env:
   global:
   - NODE_VERSION=10.2.1
 install:
+  - echo y | sdkmanager "ndk-bundle"
+  - echo y | sdkmanager "platforms;android-28"
   - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.2/install.sh | bash
   - export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
   - nvm install 10.2.1
@@ -124,16 +127,26 @@ install:
   # - npm install -g detox-cli
   # - npm install
   # - react-native link
+
+  - echo 'count=0' > /home/travis/.android/repositories.cfg # Avoid harmless sdkmanager warning 
+  - echo y | sdkmanager "platform-tools" >/dev/null
+  - echo y | sdkmanager "tools" >/dev/null # A second time per Travis docs, gets latest versions
+  - echo y | sdkmanager "build-tools;28.0.3" >/dev/null # Implicit gradle dependency - gradle drives changes
+  - echo y | sdkmanager "platforms;android-26" >/dev/null # We need the API of the emulator we will run
+  - echo y | sdkmanager "platforms;android-28" >/dev/null # We need the API of the current compileSdkVersion from gradle.properties
+  - echo y | sdkmanager --channel=4 "emulator" >/dev/null # Use canary channel to get emulator 29.x for x86_64 image support
+  - echo y | sdkmanager "extras;android;m2repository" >/dev/null
+  - echo y | sdkmanager "system-images;android-26;default;x86_64" >/dev/null # install our emulator
 before_script:
-  - echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a -c 100M
+  - echo no | android create avd --force -n test -t android-26 --abi x86_64
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 script:
   - adb devices
   # - yes | sudo sdkmanager --licenses 
-  - echo y | sdkmanager 'ndk-bundle'
-  - echo y | sdkmanager 'cmake;3.6.4111459'
-  - echo y | sdkmanager 'lldb;3.0'
+  # - echo y | sdkmanager 'ndk-bundle'
+  # - echo y | sdkmanager 'cmake;3.6.4111459'
+  # - echo y | sdkmanager 'lldb;3.0'
   # - detox build -c android.emu.release
   # - detox test -c android.emu.release --cleanup
