--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "build":
         "cd android && ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release && cd ..",
         "type": "android.attached",
-        "name": "Nexus_5X_API_26"
+        "name": "test"
     }
     },
     "test-runner": "mocha"
