--- a/.travis.yml
+++ b/.travis.yml
@@ -136,9 +136,9 @@ install:
   - echo y | sdkmanager "platforms;android-28" >/dev/null # We need the API of the current compileSdkVersion from gradle.properties
   - echo y | sdkmanager --channel=4 "emulator" >/dev/null # Use canary channel to get emulator 29.x for x86_64 image support
   - echo y | sdkmanager "extras;android;m2repository" >/dev/null
-  - echo y | sdkmanager "system-images;android-26;default;x86_64" >/dev/null # install our emulator
+  - echo y | sdkmanager "system-images;android-26;default;x86" >/dev/null # install our emulator
 before_script:
-  - echo no | avdmanager create avd --force -n test -k "system-images;android-26;default;x86_64" --abi x86_64
+  - echo no | avdmanager create avd --force -n test -k "system-images;android-26;default;x86" --abi x86
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
