--- a/.travis.yml
+++ b/.travis.yml
@@ -115,6 +115,7 @@ branches:
 env:
   global:
   - NODE_VERSION=10.2.1
+  - ANDROID_HOME=/usr/local/android-sdk
 install:
   - echo y | sdkmanager "ndk-bundle"
   - echo y | sdkmanager "platforms;android-28"
@@ -139,7 +140,7 @@ install:
   - echo y | sdkmanager "system-images;android-26;default;x86" >/dev/null # install our emulator
 before_script:
   - echo no | avdmanager create avd --force -n test -k "system-images;android-26;default;x86" --abi x86
-  - emulator -avd test -no-audio -no-window &
+  - $ANDROID_HOME/emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 script:
