--- a/.travis.yml
+++ b/.travis.yml
@@ -98,7 +98,7 @@ android:
   - platform-tools
   - build-tools-28.0.3
   - android-26
-  # - android-26
+  - android-28
   - add-on
   - extra
   - extra-android-support
@@ -115,7 +115,17 @@ branches:
 env:
   global:
   - NODE_VERSION=10.2.1
+  - ADB_INSTALL_TIMEOUT=8
+  - ABI=x86_64
+  - EMU_FLAVOR=default # use google_apis flavor if no default flavor emulator
+  # PATH order is incredibly important. e.g. the 'emulator' script exists in more than one place!
   - ANDROID_HOME=/usr/local/android-sdk
+  - TOOLS=${ANDROID_HOME}/tools
+  - PATH=${ANDROID_HOME}:${ANDROID_HOME}/emulator:${TOOLS}:${TOOLS}/bin:${ANDROID_HOME}/platform-tools:${PATH}
+licenses:
+  - 'android-sdk-preview-license-.+'
+  - 'android-sdk-license-.+'
+  - 'google-gdk-license-.+'
 install:
   - echo y | sdkmanager "ndk-bundle"
   - echo y | sdkmanager "platforms;android-28"
@@ -137,7 +147,13 @@ install:
   - echo y | sdkmanager "platforms;android-28" >/dev/null # We need the API of the current compileSdkVersion from gradle.properties
   - echo y | sdkmanager --channel=4 "emulator" >/dev/null # Use canary channel to get emulator 29.x for x86_64 image support
   - echo y | sdkmanager "extras;android;m2repository" >/dev/null
-  - echo y | sdkmanager "system-images;android-26;default;x86" >/dev/null # install our emulator
+  # - echo y | sdkmanager "system-images;android-26;default;x86" >/dev/null # install our emulator
+
+  - echo y | sdkmanager "system-images;android-$API;$EMU_FLAVOR;$ABI" >/dev/null # install our emulator
+  - echo no | avdmanager create avd --force -n test -k "system-images;android-$API;$EMU_FLAVOR;$ABI" -c 10M
+  - emulator -verbose -avd test -no-accel -no-snapshot -no-window $AUDIO -camera-back none -camera-front none -selinux permissive -qemu -m 2048 &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 before_script:
   - echo no | avdmanager create avd --force -n test -k "system-images;android-26;default;x86" --abi x86
   - $ANDROID_HOME/emulator -avd test -no-audio -no-window &
