--- a/.travis.yml
+++ b/.travis.yml
@@ -156,7 +156,7 @@ install:
   - adb shell input keyevent 82 &
 before_script:
   - echo no | avdmanager create avd --force -n test -k "system-images;android-26;default;x86" --abi x86
-  - $ANDROID_HOME/emulator -avd test -no-audio -no-window &
+  - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 script:
