--- a/.travis.yml
+++ b/.travis.yml
@@ -135,10 +135,10 @@ install:
   - nvm install 10.2.1
   - nvm use 10.2.1
   - nvm alias default 10.2.1
-  # - npm install -g react-native-cli
-  # - npm install -g detox-cli
-  # - npm install
-  # - react-native link
+  - npm install -g react-native-cli
+  - npm install -g detox-cli
+  - npm install
+  - react-native link
 
   - echo 'count=0' > /home/travis/.android/repositories.cfg # Avoid harmless sdkmanager warning 
   - echo y | sdkmanager "platform-tools" >/dev/null
@@ -166,5 +166,5 @@ script:
   # - echo y | sdkmanager 'ndk-bundle'
   # - echo y | sdkmanager 'cmake;3.6.4111459'
   # - echo y | sdkmanager 'lldb;3.0'
-  # - detox build -c android.emu.release
-  # - detox test -c android.emu.release --cleanup
+  - detox build -c android.emu.release
+  - detox test -c android.emu.release --cleanup
