--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "binaryPath": "android/app/build/outputs/apk/release/app-release.apk",
         "build":
         "cd android && ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release && cd ..",
-        "type": "android.attached",
+        "type": "android.emulator",
         "name": "test"
     }
     },
