--- a/.travis.yml
+++ b/.travis.yml
@@ -158,6 +158,8 @@ install:
   - emulator -verbose -avd test -no-accel -no-snapshot -no-window $AUDIO -camera-back none -camera-front none -selinux permissive -qemu -m 2048 &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
+  - cat /home/travis/.android/avd/test.avd/config.ini
+  - echo 'skin.name=nexus_5x' >> /home/travis/.android/avd/test.avd/config.ini
 before_script:
   - echo no | avdmanager create avd --force -n test -k "system-images;android-26;default;x86" --abi x86
   - emulator -avd test -no-audio -no-window &
