--- a/.travis.yml
+++ b/.travis.yml
@@ -160,6 +160,9 @@ install:
   - adb shell input keyevent 82 &
   - cat /home/travis/.android/avd/test.avd/config.ini
   - echo 'skin.name=nexus_5x' >> /home/travis/.android/avd/test.avd/config.ini
+  - echo 'hw.lcd.height=1920' >> /home/travis/.android/avd/test.avd/config.ini
+  - echo 'hw.lcd.width=1080' >> /home/travis/.android/avd/test.avd/config.ini
+  - cat /home/travis/.android/avd/test.avd/config.ini
 before_script:
   - echo no | avdmanager create avd --force -n test -k "system-images;android-26;default;x86" --abi x86
   - emulator -avd test -no-audio -no-window &
