--- a/.travis.yml
+++ b/.travis.yml
@@ -165,7 +165,7 @@ install:
   - cat /home/travis/.android/avd/test.avd/config.ini
 before_script:
   - echo no | avdmanager create avd --force -n test -k "system-images;android-26;default;x86_64" --abi x86_64
-  - emulator -avd test -no-audio -no-window &
+  - $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 script:
