--- a/.travis.yml
+++ b/.travis.yml
@@ -156,14 +156,14 @@ matrix:
       # - echo y | sdkmanager "system-images;android-26;default;x86" >/dev/null # install our emulator
 
       - echo y | sdkmanager "system-images;android-$API;$EMU_FLAVOR;$ABI" >/dev/null # install our emulator
-      - echo no | avdmanager create avd --force -n test -k "system-images;android-$API;$EMU_FLAVOR;$ABI" -c 10M
+      - echo no | avdmanager create avd --force -n test -k "system-images;android-$API;$EMU_FLAVOR;$ABI" -c 10M --skin 1920x1080
       - emulator -verbose -avd test -no-accel -no-snapshot -no-window $AUDIO -camera-back none -camera-front none -selinux permissive -qemu -m 2048 &
       - android-wait-for-emulator
       - adb shell input keyevent 82 &
       - cat /home/travis/.android/avd/test.avd/config.ini
-      - echo 'skin.name=test' >> /home/travis/.android/avd/test.avd/config.ini
-      - echo 'hw.lcd.height=1920' >> /home/travis/.android/avd/test.avd/config.ini
-      - echo 'hw.lcd.width=1080' >> /home/travis/.android/avd/test.avd/config.ini
+      # - echo 'skin.name=1920x1080' >> /home/travis/.android/avd/test.avd/config.ini
+      # - echo 'hw.lcd.height=1920' >> /home/travis/.android/avd/test.avd/config.ini
+      # - echo 'hw.lcd.width=1080' >> /home/travis/.android/avd/test.avd/config.ini
       - cat /home/travis/.android/avd/test.avd/config.ini
     before_script:
       - echo no | avdmanager create avd --force -n test -k "system-images;android-26;default;x86_64" --abi x86_64
