--- a/.travis.yml
+++ b/.travis.yml
@@ -95,7 +95,7 @@ matrix:
     dist: trusty
     android:
       components:
-      - tools
+      # - tools
       # - tools
       # - platform-tools
       - build-tools-27.0.3
@@ -166,7 +166,7 @@ matrix:
       # - echo 'hw.lcd.width=1080' >> /home/travis/.android/avd/test.avd/config.ini
       # - cat /home/travis/.android/avd/test.avd/config.ini
     before_script:
-      - echo no | avdmanager create avd --force -n test -k "system-images;android-27;default;armeabi-v7a" --abi armeabi-v7a -c 100M
+      - echo no | android create avd --force -n test -k "system-images;android-27;default;armeabi-v7a" --abi armeabi-v7a -c 100M
       - $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window &
       - android-wait-for-emulator
       - adb shell input keyevent 82 &
