--- a/.travis.yml
+++ b/.travis.yml
@@ -96,8 +96,8 @@ matrix:
     android:
       components:
       # - tools
-      # - tools
-      # - platform-tools
+      - tools
+      - platform-tools
       - build-tools-27.0.3
       - android-27
       # - android-28
