--- a/.travis.yml
+++ b/.travis.yml
@@ -95,18 +95,20 @@ matrix:
     dist: trusty
     android:
       components:
-      # - tools
+      
       - tools
-      - platform-tools
-      - build-tools-27.0.3
       - android-27
+      - platform-tools
+      - tools
+      - build-tools-27.0.3
+      
       # - android-28
       # - add-on
       # - extra
       # - extra-android-support
       # - extra-google-google_play_services
-      # - extra-google-m2repository
-      # - extra-android-m2repository
+      - extra-google-m2repository
+      - extra-android-m2repository
       - sys-img-x86-android-27
       # - sys-img-x86-android-28
       # - sys-img-armeabi-v7a-google_apis-26
