--- a/.travis.yml
+++ b/.travis.yml
@@ -106,7 +106,7 @@ matrix:
       # - add-on
       # - extra
       # - extra-android-support
-      # - extra-google-google_play_services
+      - extra-google-google_play_services
       - extra-google-m2repository
       - extra-android-m2repository
       - sys-img-x86-android-27
@@ -169,7 +169,7 @@ matrix:
       # - cat /home/travis/.android/avd/test.avd/config.ini
     before_script:
       - echo no | android create avd --force -n test -t android-27 --abi x86 -c 100M
-      - $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window &
+      - emulator -avd test -no-audio -no-window &
       - android-wait-for-emulator
       - adb shell input keyevent 82 &
     script:
