--- a/.travis.yml
+++ b/.travis.yml
@@ -120,7 +120,7 @@ matrix:
       global:
       - NODE_VERSION=10.2.1
       - ADB_INSTALL_TIMEOUT=8
-      - ABI=x86_64
+      - ABI=x86
       - EMU_FLAVOR=default # use google_apis flavor if no default flavor emulator
       # PATH order is incredibly important. e.g. the 'emulator' script exists in more than one place!
       - ANDROID_HOME=/usr/local/android-sdk
