--- a/.travis.yml
+++ b/.travis.yml
@@ -156,7 +156,7 @@ matrix:
       # - echo y | sdkmanager "platform-tools" >/dev/null
       # - echo y | sdkmanager "tools" >/dev/null # A second time per Travis docs, gets latest versions
       # - echo y | sdkmanager "build-tools;28.0.3" >/dev/null # Implicit gradle dependency - gradle drives changes
-      # - echo y | sdkmanager "platforms;android-26" >/dev/null # We need the API of the emulator we will run
+      - echo y | sdkmanager "platforms;android-27" # We need the API of the emulator we will run
       # - echo y | sdkmanager "platforms;android-28" >/dev/null # We need the API of the current compileSdkVersion from gradle.properties
       # - echo y | sdkmanager --channel=4 "emulator" >/dev/null # Use canary channel to get emulator 29.x for x86_64 image support
       # - echo y | sdkmanager "extras;android;m2repository" >/dev/null
