--- a/.travis.yml
+++ b/.travis.yml
@@ -179,6 +179,8 @@ matrix:
     #   - android-wait-for-emulator
     #   - adb shell input keyevent 82 &
     before_script:
+      - echo no | android create avd --force -n test -t android-27 --abi x86 -c 100M
+      - emulator -avd test -no-audio -no-window &
 
     script:
       - adb devices
