--- a/.travis.yml
+++ b/.travis.yml
@@ -151,7 +151,7 @@ matrix:
     #   - 'google-gdk-license-.+'
     install:
       # - export ANDROID_SDK_ROOT=$ANDROID_HOME
-      # - echo y | sdkmanager "ndk-bundle"
+      - echo y | sdkmanager "ndk-bundle"
       # - echo y | sdkmanager "platforms;android-27"
       - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.2/install.sh | bash
       - export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
