Update emulator name

--- a/.travis.yml
+++ b/.travis.yml
@@ -195,8 +195,8 @@ matrix:
     #   - adb shell input keyevent 82 &
 
     before_script:
-      - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
-      - emulator -avd test -no-skin -no-audio -no-window &
+      - echo no | android create avd --force -n  emulator-5554 -t android-22 --abi armeabi-v7a
+      - emulator -avd  emulator-5554 -no-skin -no-audio -no-window &
       - android-wait-for-emulator
       - adb shell input keyevent 82 &
 
